--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <script type="module" src="main.js"></script>
 
   <p>prueba uno</p>
-  <p>prueba dos jajajajajaja</p> 
+  <p>prueba cuatro</p> 
   <p>prueba tres </p>
 
 </body>
