--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="root"></div>
+  
+
+  
+  
   <script type="module" src="main.js"></script>
 
-  <p>prueba uno</p>
-  <p>prueba cuatro</p> 
-  <p>prueba tres </p>
+
 
 </body>
 </html>
